:art: 优化使用方式